[svn] more straightening up and better S-curve